- Fixed bug #34302 (date('W') do not return leading zeros for week 1 to 9).