ext/standard/datetime.c
@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: datetime.c,v 1.96.2.19.2.1 2005/07/27 11:22:36 hyanantha Exp $ */
+/* $Id: datetime.c,v 1.96.2.19.2.2 2005/08/30 09:14:51 derick Exp $ */
 
 #include "php.h"
 #include "zend_operators.h"
@@ -626,7 +626,7 @@ static void php_date(INTERNAL_FUNCTION_PARAMETERS, int gm)
 					wk = (yd + 6 - wd + fd) / 7 - (fd > 3);
 				}
 
-				sprintf(tmp_buff, "%d", wk);  /* SAFE */
+				sprintf(tmp_buff, "%02d", wk);  /* SAFE */
 				strcat(Z_STRVAL_P(return_value), tmp_buff);
 				break;
 
